# Game-Engine

./: CMakeLists.txt  README.md  main.cpp
include/: Window.hpp
include/Game/: GameManager.hpp
include/Graphical/Window/: ASprite.hpp  ISprite.hpp
plugins/graphical/sfml/: CMakeLists.txt
plugins/graphical/sfml/include/: Graphics.hpp  Window.hpp
plugins/graphical/sfml/include/Graphics/: Sprite.hpp  SpriteException.hpp  Texture.hpp  TextureException.hpp
plugins/graphical/sfml/include/Window/: Vector.hpp  VideoMode.hpp  Window.hpp
plugins/graphical/sfml/src/Graphics/: Sprite.cpp  Texture.cpp
plugins/graphical/sfml/src/Window/: Vector.hpp  VideoMode.cpp  Window.cpp
src/: Window.cpp
src/Game/: GameManager.hpp
